# colombus

./: CMakeLists.txt  README.md  build.sh
src/: 5_27.cpp  5_28.cpp  5_29.cpp  5_30.cpp  5_31.cpp  6_03.cpp  6_04.cpp  6_05.cpp  6_06.cpp  6_07.cpp  6_10.cpp  6_11.cpp  6_12.cpp  6_13.cpp  6_14.cpp  6_17.cpp  prac.cpp
